# update-flex

./: .gitignore  Build.md  LICENSE  README.md  ToDo.md  pyproject.toml
snap/: snapcraft.yaml
snap/gui/: update-flex.desktop
test/: Banda-Linda-sample.lift  Banda-Linda-sample_formatted.lift  Vale FLEx LIFT export.lift
test/sango LIFT export/: sango LIFT export.lift-ranges.xml
test/sango LIFT export/WritingSystems/: de.ldml  en.ldml  fr.ldml  sg-fonipa.ldml  sg.ldml
update-flex/: app.py  gui.py  update-flex.py  util.py
update_flex/: app.py  gui.py  util.py
