[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "update-flex"
version = "0.3.1"
authors = [
    {name = "Nate Marti", email = "nate_marti@sil.org"},
]
requires-python = ">=3.7"
keywords = ["flex", "language", "data", "update"]
license = {file = "LICENSE"}
dependencies = ["lxml"]
dynamic = ["readme"]

[project.scripts]
update-flex = "update_flex.app:main"

[tool.setuptools]
packages = ["update_flex"]
# package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}

[tool.setuptools.package-data]
update_flex = ["data/*.ico", "data/*.png"]
